tests/errors/float/invalid-rep.futil
component main() -> () {
    cells {
        f = std_float_const(1, 32, 0.5);
    }
    wires {}
    control {}
}